--- a/ENGR114-Labs/Lab08-MicroPython/ENGR114-Lab08-MicroPython.ipynb
+++ b/ENGR114-Labs/Lab08-MicroPython/ENGR114-Lab08-MicroPython.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Before you start the lab, try using the MicroPython online with a broswer-based [MicroPython online emulator](https://micropython.org/unicorn/). The emulator allows you to run commands at a MicroPython Prompt and see the result on a virtual pyboard.\n",
     "\n",
-    "Also browse through the [MicroPython Docs](https://docs.micropython.org/en/latest/) and in particular the [ESP8266](https://docs.micropython.org/en/latest/esp8266/quickref.html) section. You will use an ESP8266 microcontroller in this lab."
+    "Also browse through the [MicroPython Docs](https://docs.micropython.org/en/latest/) and in particular the [ESP8266](https://docs.micropython.org/en/latest/esp8266/quickref.html) section. You will use an ESP8266-based microcontroller in this lab."
    ]
   },
   {
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ensure the Feather Huzzah board is connected with a USB cable, then connect to it with PuTTY using the proper serial port (COM#) and 115200 baud. Remember to use the **Serial** radio button under **Connection Type:** to select serial communication or you will be trying to communicate with the ESP8266 Microcontroller over SSH which won't work. \n",
+    "Ensure the Feather Huzzah board is connected with a USB cable, then connect to it with a program called PuTTY. Set the proper serial port (COM#) and and specify 115200 baud. Remember to use the **Serial** radio button under **Connection Type:** to select serial communication or you will be trying to communicate with the ESP8266 Microcontroller over SSH which won't work. \n",
     "\n",
     "![PuTTY in Windows 10 start menu](images/putty_in_start_menu.png)\n",
     "\n",
@@ -150,6 +150,18 @@
    "metadata": {},
    "source": [
     "The ESP8266 microcontroller as a built-in red LED mounted on the board close to the USB cable input. MicroPython can be used to blink this LED on and off."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Connect an LED to the ESP8266 Microcontroller as shown below. \n",
+    "\n",
+    " * Connect Pin 13 to the LONG leg of the LED (red wire)\n",
+    " * Connect GND to the SHORT leg of the LED to through a 330 $\\Omega$ resistor (black wire).\n",
+    "\n",
+    "![fritzing diagram ESP8266 LED](images/feather_huzzah_LED_bb.png)"
    ]
   },
   {
@@ -233,18 +245,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, you will learn how to connect a light sensor to the ESP8266 Microcontroller and use the MicroPython REPL to record the light level."
+    "In this section, you will learn how to connect a potentiometer sensor to the ESP8266 Microcontroller and use the MicroPython REPL to record the potentiometer level."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Connect the light sensor to the ESP8266 Microcontroller\n",
+    "### Connect the potentiometer to the ESP8266 Microcontroller\n",
     "\n",
-    "Connect the light sensor through a resistor to the ESP8266 Microcontroller\n",
+    "Connect the potentiometer to the ESP8266 Microcontroller as shown below. Connect Pin 13 to the LONG leg of the LED (red wire) and connect the SHORT leg of the LED to ground through a 330 $\\Omega$ resistor (black wire).\n",
     "\n",
-    "[fritzing diagram]"
+    "![fritzing diagram ESP8266 LED](images/feather_huzzah_LED_bb.png)"
    ]
   },
   {
