--- a/ENGR114-Labs/Lab02-Sifting_Weather_Data/Lab02-Sifting_Weather_Data.ipynb
+++ b/ENGR114-Labs/Lab02-Sifting_Weather_Data/Lab02-Sifting_Weather_Data.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "4    0    0   0    0   5   0   0   0   0  156    0   0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "30  33   NaN   0   NaN   0   NaN   0   0    NaN   1  NaN   0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,11 +376,12 @@
    "metadata": {},
    "source": [
     "Compute and store the following statistics/properties of the data in the dataframe ```df1``` in variables named as follows:\n",
+    "\n",
     " * ```m_avg```: average inches fallen in month ```m```\n",
     " * ```m_max```: maximum inches fallen in month ```m```\n",
     " * ```d_max```: day(s) of month ```m``` in which ```m_max``` inches fell\n",
+    " * ```nd_zero```: number of day(s) of month ```m``` in which zero inches fell\n",
     " * ```d_zero```: day(s) of month ````m```` in which zero inches fell\n",
-    " * ```nd\\_zero```: number of day(s) of month ```m``` in which zero inches fell\n",
     " * ```d_nonzero```: day(s) of month ```m``` in which at least some rain fell\n",
     " * ```nd_nonzero```: number of day(s) in month ```m``` in which at least some rain fell   \n",
     " * ```m_avg_nonzero```: average inches of only day(s) in which some rain fell\n",
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -398,18 +399,43 @@
      "text": [
       "18.392857142857142\n",
       "135.0\n",
-      "135.0\n"
+      "17\n",
+      "1\n",
+      "14\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "36.785714285714285"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "m = 1\n",
+    "\n",
     "m_avg = np.mean(df[m])\n",
     "print(m_avg)\n",
+    "\n",
     "m_max = np.max(df[m])\n",
     "print(m_max)\n",
-    "d_max = np.max(df[m])\n",
-    "print(d_max)"
+    "\n",
+    "d_max = df.index[df[m] == m_max]\n",
+    "print(d_max[0])\n",
+    "\n",
+    "nd_zero = sum(df[m]==m_max)\n",
+    "print(nd_zero)\n",
+    "\n",
+    "nd_nonzero = sum(df[m]>0)\n",
+    "print(d_nonzero)\n",
+    "\n",
+    "df_list = list(df[m].values)\n",
+    "pos_rain_lst = [x for x in df_list if x>0 ]\n",
+    "np.mean(pos_rain_lst)\n"
    ]
   },
   {
