--- a/ENGR114-Labs/Lab06-Audio_Filtering/ENGR101-Lab06-Audio_Filtering.ipynb
+++ b/ENGR114-Labs/Lab06-Audio_Filtering/ENGR101-Lab06-Audio_Filtering.ipynb
@@ -8,6 +8,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deliverables\n",
+    "\n",
+    "Each student’s submission for the lab should be one of the following files (you do not need to submit all the .py files used in the lab, just the .py files you were primarily responsible for). Upload these two files to the D2L Lab 6 Uploads folder. \n",
+    "\n",
+    "**lab6.py** \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### _By P. Kazarinoff, Portland Community College, 2018_"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
