--- a/ENGR114-Labs/Lab08-MicroPython/ENGR114-Lab08-MicroPython.ipynb
+++ b/ENGR114-Labs/Lab08-MicroPython/ENGR114-Lab08-MicroPython.ipynb
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ensure the Feather Huzzah board is connected with a USB cable, then connect to it with a program called PuTTY. Set the proper serial port (COM#) and and specify 115200 baud. Remember to use the **Serial** radio button under **Connection Type:** to select serial communication or you will be trying to communicate with the ESP8266 Microcontroller over SSH which won't work. \n",
+    "Ensure the ESP8266 board is connected with a USB cable, then connect to it with a program called PuTTY. Set the proper serial port (COM#) and and specify 115200 baud. Remember to use the **Serial** radio button under **Connection Type:** to select serial communication or you will be trying to communicate with the ESP8266 Microcontroller over SSH which won't work. \n",
     "\n",
     "![PuTTY in Windows 10 start menu](images/putty_in_start_menu.png)\n",
     "\n",
@@ -256,7 +256,7 @@
     "\n",
     "Connect the potentiometer to the ESP8266 Microcontroller as shown below. Connect Pin 13 to the LONG leg of the LED (red wire) and connect the SHORT leg of the LED to ground through a 330 $\\Omega$ resistor (black wire).\n",
     "\n",
-    "![fritzing diagram ESP8266 LED](images/feather_huzzah_LED_bb.png)"
+    "![fritzing diagram ESP8266 LED](images/feather_huzzah_potentiometer_bb.png)"
    ]
   },
   {
@@ -289,7 +289,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deliverables"
+    "## Deliverables\n",
+    "\n",
+    "Before closing the PuTTY window, run the command ```history```. Copy the ouput from the window into a text file. Save the file as ```lab8.txt```. Upload the ```lab8.tct``` file to D2L."
    ]
   },
   {
